fix: Database Connection dialog missing padding [BACKLOG-39638]

--- a/widgets/src/main/resources/org/pentaho/gwt/widgets/themes/public/themes/ruby/globalRuby.css
+++ b/widgets/src/main/resources/org/pentaho/gwt/widgets/themes/public/themes/ruby/globalRuby.css
@@ -1052,6 +1052,7 @@ div#FilterPanel div.pentaho-toggle-button-up button {
 
 :where(.responsive.pentaho-xul-gwt) .deck-panel > * > * {
   flex: inherit;
+  box-sizing: border-box;
   width: 100% !important;
   height: auto !important;
 }
